changes in New Post Section

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -9,7 +9,7 @@
 			<input type="text" name="blog[title]" placeholder="title">
 		</div>
 		<div class="field">
-			<label>Image</label>
+			<label>Image(URL)</label>
 			<input type="text" name="blog[image]" placeholder="image">
 		</div>
 		<div class="field">
